removed rendering of html no longer needed, delete button properly separated from save button, navbar elements now visible, link added to movie name on page

--- a/client/src/components/List/style.css
+++ b/client/src/components/List/style.css
@@ -1,9 +1,9 @@
 .list-overflow-container {
-  max-height: 545px;
-  border: 1px #DDDDDD solid;
+  /* max-height: 545px; */
+  border: 1px #dddddd solid;
   border-radius: 4px;
-  overflow-y: scroll;
-  overflow-x: hidden;
+  /* overflow-y: scroll; */
+  /* overflow-x: hidden; */
 }
 
 .list-overflow-container ul {
@@ -21,7 +21,8 @@
 }
 
 .list-overflow-container li a {
-  color: #2A878C;
+  /* color: #2a878c; */
+  color: black;
 }
 
 .list-overflow-container li:first-child {
